--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -61,7 +61,7 @@
   }
   
   .profile-pic {
-    background: url('../assets/satish.jpg') no-repeat center center;
+    background: url('../assets/sushan.jpeg') no-repeat center center;
     background-size: cover;
     width: 300px;
     height: 400px;
