--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -13,7 +13,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   background-color: white;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
